--- a/DMDiary/dmdiary/resources/css/style.css
+++ b/DMDiary/dmdiary/resources/css/style.css
@@ -1,7 +1,10 @@
-body{ 
-    display : flex;
+body{
+    display: flex;
+    flex-flow: row;
+    background-color: azure;
 }
 
 .sidebar{
-    
+    display: flex;
+    flex-direction: column;
 }
